--- a/RSAv2/RSAv2.csproj
+++ b/RSAv2/RSAv2.csproj
@@ -49,7 +49,7 @@
   <ItemGroup>
     <Compile Include="FileOperation.cs" />
     <Compile Include="MainWindow.cs" />
-    <Compile Include="PrimeNumbers.cs" />
+    <Compile Include="PrimeNumber.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RSA.cs" />
